tests/integration/errors/function/redeclaration.it
Function redeclaration

- compilation error
=========
void a() {

}

void a() {

}
=========
<stdin>:5: error: redefinition of function 'a'
